[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy_master"
version = "1.2.0.6.1"
dependencies = ['aiohttp', 'bs4', 'lxml']
authors = [
  { name="555Russich", email="Kutsokondima@yandex.ru" },
]
description = "My first package to provide easy reading proxies from *.txt in different ways. Also scrap proxies..."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/555Russich/proxy_master"
