[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy_master"
version = "2.0.0"
dependencies = ['aiohttp', 'bs4', 'lxml', 'pycountry', 'aiohttp_socks']
authors = [
  { name="555Russich", email="Kutsokondima@yandex.ru" },
]
description = "My first package to scrap free proxies from open resources"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/555Russich/proxy_master"
